--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "^19.1.0",
     "@google/generative-ai": "^0.24.1",
     "bootstrap": "^5.3.8",
-    "quickpick": "file:",
+    "bootstrap-icons": "^1.11.4",
+    "ngx-markdown": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
